Filled out project info in cards

--- a/index.html
+++ b/index.html
@@ -46,34 +46,40 @@
         <div class="h2 title mb-5">
             PROJECTS
         </div>
-        <div class="row mx-5">
-            <div class="col-sm-4">
+        <div class="row mx-2 mb-2">
+            <div class="col-lg-4">
                 <div class="card mx-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/images/cosmopawlitan.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title text-center">Cosmopawlitan</h5>
+                      <p class="card-text text-center">A full-stack web application using the rescuegroups API along with MongoDB, React, Express, and Node.js to search for dogs and cats available for adoption.</p>
+                      <div class="text-center">
+                          <a href="https://stark-anchorage-96319.herokuapp.com/" class="btn button">Live example</a>
+                      </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <div class="card mx-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/images/techblog.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title text-center">Tech Blog</h5>
+                      <p class="card-text text-center">A node.js, Express, MongoDB, and Handlebars website where users can create accounts, log in, and make or delete posts and comments. Created to practice new front-end frameworks and perform CRUD operations on a database of posts, comments, and users.</p>
+                      <div class="text-center">
+                          <a href="https://desolate-sands-01020.herokuapp.com/" class="btn button">Live example</a>
+                      </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
                 <div class="card mx-3">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/images/budgettracker.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title text-center">Budget Tracker</h5>
+                      <p class="card-text text-center">A web application for tracking a budget over time, this project was intended to practice my ability to create an offline web application. This page will continue to record transactions while offline, and update the database upon reconnecting.</p>
+                      <div class="text-center">
+                          <a href="https://guarded-escarpment-77758.herokuapp.com/" class="btn button">Live example</a>
+                      </div>
                     </div>
                 </div>
             </div>
