Fixed mobile responsiveness for cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/index.css" crossorigin="anonymous">
 
+<!-- Railway font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <!-- Whole page container -->
@@ -35,7 +40,7 @@
         <h1 class="header">Hey, I'm <span class="name">Billy</span>.</h1>
         <h2 class="mt-4 header-sub">A full-stack web developer.</h2>
     </div>
-    <p class="about text-center">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
+    <p class="about">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
         <a class="btn button">Résumé</a>
         <a class="btn button" href="https://github.com/Billy-MK">Github</a>
@@ -43,46 +48,52 @@
     </div>
     <!-- Projects -->
     <div>
-        <div class="h2 title mb-5">
+        <div class="h2 title">
             PROJECTS
         </div>
         <div class="row mx-2 mb-2">
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-3">
                 <div class="card mx-3">
                     <img src="./assets/images/cosmopawlitan.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Cosmopawlitan</h5>
-                      <p class="card-text text-center">A full-stack web application using the rescuegroups API along with MongoDB, React, Express, and Node.js to search for dogs and cats available for adoption.</p>
+                      <p class="card-text text-center mt-3">A full-stack web application using the rescuegroups API along with MongoDB, React, Express, and Node.js to search for dogs and cats available for adoption.</p>
                       <div class="text-center">
                           <a href="https://stark-anchorage-96319.herokuapp.com/" class="btn button">Live example</a>
                       </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-3">
                 <div class="card mx-3">
                     <img src="./assets/images/techblog.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Tech Blog</h5>
-                      <p class="card-text text-center">A node.js, Express, MongoDB, and Handlebars website where users can create accounts, log in, and make or delete posts and comments. Created to practice new front-end frameworks and perform CRUD operations on a database of posts, comments, and users.</p>
+                      <p class="card-text text-center mt-3">A Node.js, Express, MongoDB, and Handlebars website where users can create accounts, log in, and make or delete posts and comments. Created to practice new front-end frameworks and perform CRUD operations on a database of posts, comments, and users.</p>
                       <div class="text-center">
                           <a href="https://desolate-sands-01020.herokuapp.com/" class="btn button">Live example</a>
                       </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 mt-3">
                 <div class="card mx-3">
                     <img src="./assets/images/budgettracker.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Budget Tracker</h5>
-                      <p class="card-text text-center">A web application for tracking a budget over time, this project was intended to practice my ability to create an offline web application. This page will continue to record transactions while offline, and update the database upon reconnecting.</p>
+                      <p class="card-text text-center mt-3">A web application for tracking a budget over time, this project was intended to practice my ability to create an offline web application. This page will continue to record transactions while offline, and update the database upon reconnecting.</p>
                       <div class="text-center">
                           <a href="https://guarded-escarpment-77758.herokuapp.com/" class="btn button">Live example</a>
                       </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- SKILLS -->
+    <div>
+        <div class="h2 title mb-5">
+            SKILLS
         </div>
     </div>
   </div>
