Started building projects section, css

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
         <div class="h2 title mb-5">
             SKILLS
         </div>
+        <div class="text-center skills">
+            <div class="skill">
+                Test
+            </div>
+            <div class="skill">
+                Test
+            </div>
+        </div>
     </div>
   </div>
 
