--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="header">Hey, I'm <span class="name">Billy</span>.</h1>
         <h2 class="mt-4 header-sub">A full-stack web developer.</h2>
     </div>
-    <p class="about">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
+    <p class="text">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
         <a class="btn button">Résumé</a>
         <a class="btn button" href="https://github.com/Billy-MK">Github</a>
@@ -57,7 +57,7 @@
                     <img src="./assets/images/cosmopawlitan.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Cosmopawlitan</h5>
-                      <p class="card-text text-center mt-3">A full-stack web application using the rescuegroups API along with MongoDB, React, Express, and Node.js to search for dogs and cats available for adoption.</p>
+                      <p class="text text-center mt-3">A full-stack web application using the rescuegroups API along with MongoDB, React, Express, and Node.js to search for dogs and cats available for adoption.</p>
                       <div class="text-center">
                           <a href="https://stark-anchorage-96319.herokuapp.com/" class="btn button">Live example</a>
                       </div>
@@ -69,7 +69,7 @@
                     <img src="./assets/images/techblog.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Tech Blog</h5>
-                      <p class="card-text text-center mt-3">A Node.js, Express, MongoDB, and Handlebars website where users can create accounts, log in, and make or delete posts and comments. Created to practice new front-end frameworks and perform CRUD operations on a database of posts, comments, and users.</p>
+                      <p class="text text-center mt-3">A Node.js, Express, MongoDB, and Handlebars website where users can create accounts, log in, and make or delete posts and comments. Created to practice new front-end frameworks and perform CRUD operations on a database of posts, comments, and users.</p>
                       <div class="text-center">
                           <a href="https://desolate-sands-01020.herokuapp.com/" class="btn button">Live example</a>
                       </div>
@@ -81,7 +81,7 @@
                     <img src="./assets/images/budgettracker.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center">Budget Tracker</h5>
-                      <p class="card-text text-center mt-3">A web application for tracking a budget over time, this project was intended to practice my ability to create an offline web application. This page will continue to record transactions while offline, and update the database upon reconnecting.</p>
+                      <p class="text text-center mt-3">A web application for tracking a budget over time, this project was intended to practice my ability to create an offline web application. This page will continue to record transactions while offline, and update the database upon reconnecting.</p>
                       <div class="text-center">
                           <a href="https://guarded-escarpment-77758.herokuapp.com/" class="btn button">Live example</a>
                       </div>
@@ -92,15 +92,33 @@
     </div>
     <!-- SKILLS -->
     <div>
-        <div class="h2 title mb-5">
+        <div class="h2 title mb-3">
             SKILLS
         </div>
         <div class="text-center skills">
-            <div class="skill">
-                Test
+            <div class="skill text">
+                HTML
             </div>
-            <div class="skill">
-                Test
+            <div class="skill text">
+                CSS
+            </div>
+            <div class="skill text">
+                Javascript
+            </div>
+            <div class="skill text">
+                React
+            </div>
+            <div class="skill text">
+                Node.js
+            </div>
+            <div class="skill text">
+                Express
+            </div>
+            <div class="skill text">
+                MongoDB
+            </div>
+            <div class="skill text">
+                Bootstrap
             </div>
         </div>
     </div>
