Made skills boxes more apparent, fixed margins/width for about content (accidentally removed a class tag on previous commit)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="header">Hey, I'm <span class="name">Billy</span>.</h1>
         <h2 class="mt-4 header-sub">A full-stack web developer.</h2>
     </div>
-    <p class="text">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
+    <p class="text about">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
         <a class="btn button">Résumé</a>
         <a class="btn button" href="https://github.com/Billy-MK">Github</a>
@@ -119,6 +119,12 @@
             </div>
             <div class="skill text">
                 Bootstrap
+            </div>
+            <div class="skill text">
+                MySQL
+            </div>
+            <div class="skill text">
+                Git
             </div>
         </div>
     </div>
