--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-sm pt-5">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">BMK</a>
+                <a class="navbar-brand underline" href="#">BMK</a>
                 <ul class="navbar-nav d-flex mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">projects</a>
+                        <a class="nav-link underline" href="#">projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">skills</a>
+                        <a class="nav-link underline" href="#">skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contact</a>
+                        <a class="nav-link underline" href="#">contact</a>
                     </li>
                 </ul>
             </div>
