Added anchors for nav items to link to

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <a class="navbar-brand underline" href="#">BMK</a>
                 <ul class="navbar-nav d-flex mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link underline" href="#">projects</a>
+                        <a class="nav-link underline" href="#projects">projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link underline" href="#">skills</a>
+                        <a class="nav-link underline" href="#skills">skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link underline" href="#">contact</a>
+                        <a class="nav-link underline" href="#contact">contact</a>
                     </li>
                 </ul>
             </div>
@@ -47,6 +47,7 @@
         <a class="btn button" href="https://www.linkedin.com/in/william-montooth-keating-a8b192195/">LinkedIn</a>
     </div>
     <!-- Projects -->
+    <a name="projects"></a>
     <div>
         <div class="h2 title">
             PROJECTS
@@ -91,6 +92,7 @@
         </div>
     </div>
     <!-- SKILLS -->
+    <a name="skills"></a>
     <div>
         <div class="h2 title mb-3">
             SKILLS
