Contact section started

--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
             </div>
         </div>
     </div>
+    <!-- CONTACT -->
+    <a name="contact"></a>
+    <div class="h2 title mb-3">
+        CONTACT
+    </div>
   </div>
 
     <!-- Bootstrap Javascript -->
