Contact by email button added, styled, positioned

--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
     </div>
     <!-- CONTACT -->
     <a name="contact"></a>
-    <div class="h2 title mb-3">
+    <div class="h2 title mb-4">
         CONTACT
+    </div>
+    <div class="text-center mb-5">
+        <a href="mailto:wmontoothkeating@gmail.com" class="btn button">Email me</a>
     </div>
   </div>
 
