Links now open in new tab with noreferrer to prevent tabnabbing

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <p class="text about">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
         <a class="btn button">Résumé</a>
-        <a class="btn button" href="https://github.com/Billy-MK">Github</a>
-        <a class="btn button" href="https://www.linkedin.com/in/william-montooth-keating-a8b192195/">LinkedIn</a>
+        <a class="btn button" href="https://github.com/Billy-MK" target="_blank" rel="noopener noreferrer">Github</a>
+        <a class="btn button" href="https://www.linkedin.com/in/william-montooth-keating-a8b192195/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
     </div>
     <!-- Projects -->
     <a name="projects"></a>
@@ -60,7 +60,7 @@
                       <h5 class="card-title text-center">Cosmopawlitan</h5>
                       <p class="text text-center mt-3">A full-stack web application using the rescuegroups API along with MongoDB, React, Express, and Node.js to search for dogs and cats available for adoption.</p>
                       <div class="text-center">
-                          <a href="https://stark-anchorage-96319.herokuapp.com/" class="btn button">Live example</a>
+                          <a href="https://stark-anchorage-96319.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="btn button">Live example</a>
                       </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                       <h5 class="card-title text-center">Tech Blog</h5>
                       <p class="text text-center mt-3">A Node.js, Express, MongoDB, and Handlebars website where users can create accounts, log in, and make or delete posts and comments. Created to practice new front-end frameworks and perform CRUD operations on a database of posts, comments, and users.</p>
                       <div class="text-center">
-                          <a href="https://desolate-sands-01020.herokuapp.com/" class="btn button">Live example</a>
+                          <a href="https://desolate-sands-01020.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="btn button">Live example</a>
                       </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                       <h5 class="card-title text-center">Budget Tracker</h5>
                       <p class="text text-center mt-3">A web application for tracking a budget over time, this project was intended to practice my ability to create an offline web application. This page will continue to record transactions while offline, and update the database upon reconnecting.</p>
                       <div class="text-center">
-                          <a href="https://guarded-escarpment-77758.herokuapp.com/" class="btn button">Live example</a>
+                          <a href="https://guarded-escarpment-77758.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="btn button">Live example</a>
                       </div>
                     </div>
                 </div>
