Added resume download

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <p class="text about">Graduate of the UC Davis Full-Stack Coding Bootcamp, now continuing my web dev journey through self-learning. Check out some of my projects or my list of skills below to learn more about me.</p>
     <div class="text-center mt-5">
-        <a class="btn button">Résumé</a>
+        <a class="btn button" href="./assets/files/resume.pdf" download>Résumé</a>
         <a class="btn button" href="https://github.com/Billy-MK" target="_blank" rel="noopener noreferrer">Github</a>
         <a class="btn button" href="https://www.linkedin.com/in/william-montooth-keating-a8b192195/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
     </div>
